Bug 1639816. Fix printing of built-in pages (partial backout of bug 1552966). r=farre

Differential Revision: https://phabricator.services.mozilla.com/D78402